<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context="com.example.kelvinmudzimuirema.cartnbasket.ShoppingCartActivity">

    <TextView
        android:id="@+id/tvCartHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ff00"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/shopping_cart"
        android:textAllCaps="true"
        android:textSize="16dp"
        android:textStyle="bold"
        tools:ignore="SpUsage" />

    <ListView
        android:id="@+id/lvCartItems"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/llTotal"
        android:layout_below="@id/tvCartHeader"/>

    <LinearLayout
        android:id="@+id/llTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBottom"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:gravity="center_vertical|end"
            android:text="@string/total_price"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text=""
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/bClear"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="#FF6600"
            android:text="@string/clear_cart"
            android:textAllCaps="true"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/bShop"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="#FF6600"
            android:text="@string/shop"
            android:textAllCaps="true"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>